# sdg-mapping-system

./: pyproject.toml
data/: ntp_sdgs_indicators.csv  ntp_sdgs_indicators_en.csv  tp_sdgs_indicators.csv  tp_sdgs_indicators_en.csv  ty_sdgs_indicators.csv  un_sdgs_indicators.csv
preprocess/: fe_data_preprocessing.ipynb  scrape_sdgs.ipynb
src/: combine.py  constants.py  main.py  process.py  test.ipynb  test3.csv
tableau/: dashboard.twb  dashboard.twbx
