[tool.poetry]
name = "project-develop"
version = "0.1.0"
description = ""
authors = ["SyuanBo <godspeed88168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sentence-transformers = "^2.7.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.5"
requests = "^2.31.0"
python-docx = "^1.1.2"
plotly = "^5.22.0"
matplotlib = "^3.8.4"
pathos = "^0.3.2"
spacy = "^3.7.4"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
